--- a/tasks/ohmyzsh.yml
+++ b/tasks/ohmyzsh.yml
@@ -1,6 +1,7 @@
 ---
 - name: install oh-my-zsh
   ansible.builtin.shell: sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" "" --unattended
+  creates: $HOME/.zshrc
 
 - name: Clone zsh-autosuggestions.git
   ansible.builtin.git:
