--- a/tasks/neovim.yml
+++ b/tasks/neovim.yml
@@ -21,9 +21,11 @@
   ansible.builtin.command: make CMAKE_BUILD_TYPE=RelWithDebInfo
   args:
     chdir: /home/{{ the_user }}/code/repos/neovim
+    creates: /home/{{ the_user }}/code/repos/neovim/build/api_metadata.mpack
 
 - name: Change working directory to neovim and run build
   become: true
   ansible.builtin.command: make install
   args:
     chdir: /home/{{ the_user }}/code/repos/neovim
+    creates: /usr/local/bin/nvim
