Adds line to .zshrc to enable packages installed by pip

--- a/tasks/additionaltools.yml
+++ b/tasks/additionaltools.yml
@@ -5,3 +5,13 @@
       - tldr
       - yt-dlp
     extra_args: --user
+
+- name: 'Modify .zshrc file to add support for tools installed by pip'
+  ansible.builtin.lineinfile:
+    path: /home/{{ the_user }}/.zshrc
+    regex: '^# export PATH='
+    line: 'export PATH=$HOME/bin:$HOME/.local/bin:/usr/local/bin:$PATH'
+    owner: '{{ the_user }}'
+    group: '{{ the_user }}'
+    mode: 0644
+
