--- a/tasks/nvm.yml
+++ b/tasks/nvm.yml
@@ -1,4 +1,6 @@
 ---
 - name: Install nvm
   ansible.builtin.shell:
-    " curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.3/install.sh | bash"
+    "curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.3/install.sh | bash"
+  args:
+    creates: /usr/local/bin/nvm
