--- a/tasks/ohmyzsh.yml
+++ b/tasks/ohmyzsh.yml
@@ -1,36 +1,45 @@
 ---
+- name: Change default shell
+  become: yes
+  user:
+    name: "{{ user }}"
+    shell: /bin/zsh
+
 - name: install oh-my-zsh
   ansible.builtin.shell: sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" "" --unattended
   args:
-    creates: /home/{{ the_user }}/.zshrc
+    creates: /home/{{ user }}/.zshrc
 
 - name: Clone zsh-autosuggestions.git
   ansible.builtin.git:
     repo: https://github.com/zsh-users/zsh-autosuggestions.git
-    dest: /home/{{ the_user }}/.oh-my-zsh/plugins/zsh-autosuggestions
+    dest: /home/{{ user }}/.oh-my-zsh/plugins/zsh-autosuggestions
     update: yes
 
 - name: Clone zhs-syntax-highlighting.git
   ansible.builtin.git:
     repo: https://github.com/zsh-users/zsh-syntax-highlighting.git
-    dest: /home/{{ the_user }}/.oh-my-zsh/plugins/zsh-syntax-highlighting
+    dest: /home/{{ user }}/.oh-my-zsh/plugins/zsh-syntax-highlighting
     update: yes
 
 - name: 'Modify .zshrc file to enable zsh-autosuggestions an zsh-syntax-highlighting'
   ansible.builtin.lineinfile:
-    path: /home/{{ the_user }}/.zshrc
+    path: /home/{{ user }}/.zshrc
     regex: '^plugins=\(git\)'
     line: 'plugins=(git zsh-autosuggestions zsh-syntax-highlighting)'
-    owner: '{{ the_user }}'
-    group: '{{ the_user }}'
+    owner: '{{ user }}'
+    group: '{{ user }}'
     mode: 0644
 
 - name: 'Modify .zshrc file to change theme from "robbyrussel" to "agnoster"'
   ansible.builtin.lineinfile:
-    path: /home/{{ the_user }}/.zshrc
+    path: /home/{{ user }}/.zshrc
     regex: '^ZSH_THEME="robbyrussell'
     line: 'ZSH_THEME="agnoster"'
-    owner: '{{ the_user }}'
-    group: '{{ the_user }}'
+    owner: '{{ user }}'
+    group: '{{ user }}'
     mode: 0644
 
+- name: 'Install .aliases and .zsh_functions'
+  ansible.builtin.include_tasks:
+    file: 'tasks/addfiles.yml'
