--- a/tasks/ohmytmux.yml
+++ b/tasks/ohmytmux.yml
@@ -2,21 +2,21 @@
 - name: Clone oh-my-tmux
   ansible.builtin.git:
     repo: https://github.com/gpakosz/.tmux.git
-    dest: /home/{{ the_user }}/.tmux
+    dest: /home/{{ user }}/.tmux
     update: yes
 
 - name: Create symbolic link to .tmux/.tmux.conf
   ansible.builtin.file:
-    src: /home/{{ the_user }}/.tmux/.tmux.conf
-    dest: /home/{{ the_user }}/.tmux.conf
-    owner: "{{ the_user }}"
-    group: "{{ the_user }}"
+    src: /home/{{ user }}/.tmux/.tmux.conf
+    dest: /home/{{ user }}/.tmux.conf
+    owner: "{{ user }}"
+    group: "{{ user }}"
     state: link
 
 - name: Create symbolic link to .tmux/.tmux.conf.local
   ansible.builtin.file:
-    src: /home/{{ the_user }}/.tmux/.tmux.conf.local
-    dest: /home/{{ the_user }}/.tmux.conf.local
-    owner: "{{ the_user }}"
-    group: "{{ the_user }}"
+    src: /home/{{ user }}/.tmux/.tmux.conf.local
+    dest: /home/{{ user }}/.tmux.conf.local
+    owner: "{{ user }}"
+    group: "{{ user }}"
     state: link
